WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145412
REGRESSION: These sorting idioms used by Peacekeeper and Browsermark are ~20X slower
https://bugs.webkit.org/show_bug.cgi?id=145412
Summary
REGRESSION: These sorting idioms used by Peacekeeper and Browsermark are ~20X...
Geoffrey Garen
Reported
2015-05-27 11:33:19 PDT
REGRESSION: These sorting idioms used by Peacekeeper and Browsermark are ~20X slower
Attachments
Patch
(1.39 KB, patch)
2015-05-27 11:50 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(4.11 KB, patch)
2015-05-27 15:54 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(4.23 KB, patch)
2015-05-27 16:26 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2015-05-29 17:11 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2015-05-29 17:13 PDT
,
Geoffrey Garen
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-05-27 11:50:40 PDT
Created
attachment 253797
[details]
Patch
Geoffrey Garen
Comment 2
2015-05-27 11:51:12 PDT
This is a partial fix for the regression.
Geoffrey Garen
Comment 3
2015-05-27 11:53:28 PDT
(I'm still waiting on a build to get performance numbers.)
Darin Adler
Comment 4
2015-05-27 11:53:59 PDT
Comment on
attachment 253797
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=253797&action=review
> Source/JavaScriptCore/ChangeLog:10 > + Use @toString instead of the String constructor because calls to the > + String constructor are never optimized. (See > +
https://bugs.webkit.org/show_bug.cgi?id=144458
.)
What’s the downside of using @toString? Would we want to change this back some day if resolved
bug 144458
?
Geoffrey Garen
Comment 5
2015-05-27 12:59:45 PDT
There's no downside to @toString. Assuming that ES6 settles on making ToString and String identical in behavior, we might eventually remove @toString once @String is fast.
Geoffrey Garen
Comment 6
2015-05-27 13:42:14 PDT
Committed
r184917
: <
http://trac.webkit.org/changeset/184917
>
Geoffrey Garen
Comment 7
2015-05-27 15:54:06 PDT
Reopening to attach new patch.
Geoffrey Garen
Comment 8
2015-05-27 15:54:07 PDT
Created
attachment 253806
[details]
Patch
Geoffrey Garen
Comment 9
2015-05-27 16:26:39 PDT
Created
attachment 253811
[details]
Patch
Geoffrey Garen
Comment 10
2015-05-27 16:43:35 PDT
Committed
r184926
: <
http://trac.webkit.org/changeset/184926
>
Geoffrey Garen
Comment 11
2015-05-29 17:11:10 PDT
Reopening to attach new patch.
Geoffrey Garen
Comment 12
2015-05-29 17:11:12 PDT
Created
attachment 253940
[details]
Patch
Geoffrey Garen
Comment 13
2015-05-29 17:13:54 PDT
Created
attachment 253941
[details]
Patch
Geoffrey Garen
Comment 14
2015-06-01 11:40:49 PDT
Committed
r185067
: <
http://trac.webkit.org/changeset/185067
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug