REGRESSION: These sorting idioms used by Peacekeeper and Browsermark are ~20X slower https://bugs.webkit.org/show_bug.cgi?id=145412

Reviewed by Benjamin Poulain.

Cache strings when doing a string-converting sort.

This is a 21% speedup.

* builtins/Array.prototype.js:
(sort.stringComparator): Use subtraction instead of branching because
it's slightly faster.

(sort.comparatorSort):
(sort.stringSort):
(sort): Add a special case for string sorting to avoid redundant string
conversion.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::createBindingPattern): Names can be empty if
they are private names.


Canonical link: https://commits.webkit.org/163435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184926 268f45cc-cd09-0410-ab3c-d52691b4dbfc